# KiCad-to-csv

./: .gitignore  README.md  kicad-export.py  kicad-from-to-csv.py  pyproject.toml  requirements.txt
.github/workflows/: linting.yml  tests.yml
src/: __init__.py
src/core/: app.py  component.py  csv_handler.py  footprint.py  logger.py  sparser.py  symbol.py
src/ui/: __init__.py  main_window.py
tests/: test_cli.py
tests/footprints/footprint.pretty/: footprint_v10.kicad_mod
tests/symbols/: symbol.kicad_sym
